сделал задание 21( получение активностей по id пользователя и по id комнаты)
